{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "ControllerGameplay",
            "id": "62cc9997-61c8-4fd9-845a-0116347a3be3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3e67139e-0b9a-4350-bec8-bc25401d685b",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "ecdd5417-3fc6-4664-a7d7-4ffe3f9f62a4",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce67c1ff-f9e4-4c66-a22e-0dfc20555855",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ff3aa82-4ea5-4a22-9a40-5a6b36680f8b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyboardGameplay",
            "id": "1ae856ca-bdaa-4ea0-8f8d-e3bfe73a0f26",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "fa5337e4-a3c9-44f2-8da2-4f9b6c1744a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveVertical",
                    "type": "Button",
                    "id": "a3fa7ce2-74c9-4f32-8ffe-31af2e29938a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveHorizontal",
                    "type": "Button",
                    "id": "972fcc3a-533c-48be-afb0-bf262892f2dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "43652344-751f-4829-bf62-a38a612a9dfd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed457ccf-1ba0-4e3c-8069-33c876cabad0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e340b5c5-7ac9-462e-963e-2787dd9f36fa",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aed259b8-042d-4886-a6a3-8758049c82cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "06311723-6a6d-4add-94ea-544229954cb6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "009b177e-fbe5-4c00-8da6-050adfe0c63a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "8e75ca82-2a96-4076-9346-521f7dbf51f7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "1e0f6f56-0dae-434a-b2f7-d25f66ee4cb7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d04891f6-0164-4b37-ba4c-72ae2d525d78",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}